// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KnowledgeBase component renders correctly with tutorials 1`] = `
<BrowserRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <KnowledgeBase>
        <section
          className="is-flex tile is-vertical section pt-0 fill-parent"
        >
          <h1
            className="has-text-centered is-uppercase has-text-weight-bold pb-20"
          >
            KNOWLEDGE_BASE
          </h1>
          <ButtonLink
            onClick={[Function]}
            title="QUICKSTART_GUIDES"
          >
            <div
              className="button-link mt-10 mb-10"
              onClick={[Function]}
            >
              <div
                className="has-text-left route-name"
              >
                <span>
                  QUICKSTART_GUIDES
                </span>
              </div>
              <div
                className="arrow-right pt-2"
              >
                <span
                  className="sp-chevron-right has-text-primary is-size-6"
                />
              </div>
            </div>
          </ButtonLink>
          <ButtonLink
            onClick={[Function]}
            title="TUTORIAL_VIDEOS"
          >
            <div
              className="button-link mt-10 mb-10"
              onClick={[Function]}
            >
              <div
                className="has-text-left route-name"
              >
                <span>
                  TUTORIAL_VIDEOS
                </span>
              </div>
              <div
                className="arrow-right pt-2"
              >
                <span
                  className="sp-chevron-right has-text-primary is-size-6"
                />
              </div>
            </div>
          </ButtonLink>
        </section>
      </KnowledgeBase>
    </Provider>
  </Router>
</BrowserRouter>
`;

exports[`KnowledgeBase component renders correctly without tutorials 1`] = `
<BrowserRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <KnowledgeBase>
        <section
          className="is-flex tile is-vertical section pt-0 fill-parent"
        >
          <h1
            className="has-text-centered is-uppercase has-text-weight-bold pb-20"
          >
            KNOWLEDGE_BASE
          </h1>
          <ButtonLink
            onClick={[Function]}
            title="QUICKSTART_GUIDES"
          >
            <div
              className="button-link mt-10 mb-10"
              onClick={[Function]}
            >
              <div
                className="has-text-left route-name"
              >
                <span>
                  QUICKSTART_GUIDES
                </span>
              </div>
              <div
                className="arrow-right pt-2"
              >
                <span
                  className="sp-chevron-right has-text-primary is-size-6"
                />
              </div>
            </div>
          </ButtonLink>
        </section>
      </KnowledgeBase>
    </Provider>
  </Router>
</BrowserRouter>
`;
